# ds_style_fitness

./: .gitignore  README.md  pyproject.toml
notebooks/: project_analysis.ipynb
style_fitness/helpers/: data_handler.py  data_preparation.py  featuring.py  plots.py
style_fitness/notebooks/: project_analysis.ipynb
