[project]
name = "style-fitness"
version = "0.1.0"
description = ""
authors = [{ name = "Jose Guzman", email = "pepetavo@pm.me" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pandas (>=2.3.1,<3.0.0)", "seaborn (>=0.13.2,<0.14.0)", "scikit-learn (>=1.7.1,<2.0.0)", "matplotlib (>=3.10.5,<4.0.0)", "pybind11 (>=2.12)", "jupyterlab-lsp (>=5.2.0,<6.0.0)", "imblearn (>=0.0,<0.1)", "optuna (>=4.4.0,<5.0.0)", "plotly (>=6.3.0,<7.0.0)", "statsmodels (>=0.14.5,<0.15.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
catppuccin-jupyterlab = "^0.2.4"

